added environment to layer

--- a/cms/config/sync/core-store.plugin_content_manager_configuration_content_types##api##layer.layer.json
+++ b/cms/config/sync/core-store.plugin_content_manager_configuration_content_types##api##layer.layer.json
@@ -222,6 +222,12 @@
       }
     },
     "layouts": {
+      "list": [
+        "id",
+        "title",
+        "type",
+        "metadata"
+      ],
       "edit": [
         [
           {
@@ -278,13 +284,13 @@
             "name": "metadata",
             "size": 12
           }
+        ],
+        [
+          {
+            "name": "environment",
+            "size": 6
+          }
         ]
-      ],
-      "list": [
-        "id",
-        "title",
-        "type",
-        "metadata"
       ]
     }
   },
