Add heap tracking

--- a/frontend/.env.default
+++ b/frontend/.env.default
@@ -1,5 +1,6 @@
 NEXT_PUBLIC_API_URL=
 NEXT_PUBLIC_GOOGLE_ANALYTICS=
+NEXT_PUBLIC_HEAP_ANALYTICS_ID=
 
 NEXT_PUBLIC_MAPBOX_API_TOKEN=
 HUBSPOT_TOKEN=
