--- a/cms/tsconfig.json
+++ b/cms/tsconfig.json
@@ -3,6 +3,9 @@
   "compilerOptions": {
     "outDir": "dist",
     "rootDir": ".",
+    "lib": [
+      "es2022"
+    ],
     "paths": {
       "@/*": [
         "./*"
