--- a/cloud_functions/data_processing/pyproject.toml
+++ b/cloud_functions/data_processing/pyproject.toml
@@ -7,17 +7,21 @@ authors = [
 ]
 readme = "README.md"
 requires-python = ">=3.13"
+
 dependencies = [
     "requests (>=2.32.3,<3.0.0)"
 ]
 
+[tool.poetry.group.dev.dependencies]
+ruff = "^0.11.9"
+pytest = "^8.3.5"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
 
-[tool.poetry.group.dev.dependencies]
-ruff = "^0.11.9"
+[tool.poetry]
+package-mode = false
 
 [tool.ruff.lint]
 select = ["E", "F", "UP", "B", "SIM", "I"]
