--- a/cloud_functions/data_processing/pyproject.toml
+++ b/cloud_functions/data_processing/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.11.9"
 pytest = "^8.3.5"
+responses = "^0.25.7"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
@@ -28,3 +29,6 @@ select = ["E", "F", "UP", "B", "SIM", "I"]
 
 [tool.ruff]
 line-length = 100
+
+[tool.pytest.ini_options]
+pythonpath = ["src", "tests"]
