--- a/cloud_functions/data_processing/pyproject.toml
+++ b/cloud_functions/data_processing/pyproject.toml
@@ -18,13 +18,14 @@ dependencies = [
     "fsspec (>=2025.3.2,<2026.0.0)",
     "google-api-core (>=2.24.2,<3.0.0)",
     "flask (>=3.1.1,<4.0.0)",
-    "functions-framework (>=3.8.2,<4.0.0)"
+    "functions-framework (>=3.8.2,<4.0.0)",
 ]
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.11.9"
 pytest = "^8.3.5"
 responses = "^0.25.7"
+dotenv-cli = "^3.4.1"
 python-dotenv = "^1.1.0"
 
 [build-system]
