add export plugin as a tool in pyproject.toml

--- a/cloud_functions/data_processing/pyproject.toml
+++ b/cloud_functions/data_processing/pyproject.toml
@@ -42,3 +42,6 @@ line-length = 100
 
 [tool.pytest.ini_options]
 pythonpath = ["src", "tests"]
+
+[tool.poetry.requires-plugins]
+poetry-plugin-export = ">=1.8"
