--- a/cms/config/sync/core-store.plugin_content_manager_configuration_content_types##api##pa.pa.json
+++ b/cms/config/sync/core-store.plugin_content_manager_configuration_content_types##api##pa.pa.json
@@ -253,6 +253,20 @@
           "sortable": true
         }
       },
+      "zone_id": {
+        "edit": {
+          "label": "zone_id",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true
+        },
+        "list": {
+          "label": "zone_id",
+          "searchable": true,
+          "sortable": true
+        }
+      },
       "createdAt": {
         "edit": {
           "label": "createdAt",
@@ -400,6 +414,10 @@
           {
             "name": "parent",
             "size": 6
+          },
+          {
+            "name": "zone_id",
+            "size": 4
           }
         ]
       ]
