--- a/cloud_functions/data_processing/pyproject.toml
+++ b/cloud_functions/data_processing/pyproject.toml
@@ -36,6 +36,7 @@ package-mode = false
 
 [tool.ruff]
 line-length = 100
+select = ["E", "F", "UP", "B", "SIM", "I"]
 
 [tool.pytest.ini_options]
 pythonpath = ["src", "tests"]
