--- a/cms/config/sync/core-store.plugin_content_manager_configuration_content_types##api##protection-coverage-stat.protection-coverage-stat.json
+++ b/cms/config/sync/core-store.plugin_content_manager_configuration_content_types##api##protection-coverage-stat.protection-coverage-stat.json
@@ -162,6 +162,20 @@
           "sortable": true
         }
       },
+      "total_area": {
+        "edit": {
+          "label": "total_area",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true
+        },
+        "list": {
+          "label": "total_area",
+          "searchable": true,
+          "sortable": true
+        }
+      },
       "createdAt": {
         "edit": {
           "label": "createdAt",
@@ -276,6 +290,12 @@
           },
           {
             "name": "protected_areas_count",
+            "size": 4
+          }
+        ],
+        [
+          {
+            "name": "total_area",
             "size": 4
           }
         ]
