add rasterio, update logger import

--- a/cloud_functions/data_processing/pyproject.toml
+++ b/cloud_functions/data_processing/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "flask (>=3.1.1,<4.0.0)",
     "functions-framework (>=3.8.2,<4.0.0)",
     "gcsfs (>=2025.5.1,<2026.0.0)",
+    "rasterio (>=1.4.3,<2.0.0)",
 ]
 
 [tool.poetry.group.dev.dependencies]
