--- a/cloud_functions/data_processing/pyproject.toml
+++ b/cloud_functions/data_processing/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "functions-framework (>=3.8.2,<4.0.0)",
     "gcsfs (>=2025.5.1,<2026.0.0)",
     "rasterio (>=1.4.3,<2.0.0)",
+    "numpy (>=2.3.2,<3.0.0)",
 ]
 
 [tool.poetry.group.dev.dependencies]
