--- a/cloud_functions/data_processing/requirements.txt
+++ b/cloud_functions/data_processing/requirements.txt
@@ -1,3 +1,7 @@
+affine==2.4.0 ; python_version == "3.13"
+aiohappyeyeballs==2.6.1 ; python_version == "3.13"
+aiohttp==3.12.7 ; python_version == "3.13"
+aiosignal==1.3.2 ; python_version == "3.13"
 attrs==25.3.0 ; python_version == "3.13"
 blinker==1.9.0 ; python_version == "3.13"
 cachetools==5.5.2 ; python_version == "3.13"
@@ -8,13 +12,17 @@ click==8.2.0 ; python_version == "3.13"
 cligj==0.7.2 ; python_version == "3.13"
 cloudevents==1.11.0 ; python_version == "3.13"
 colorama==0.4.6 ; python_version == "3.13" and platform_system == "Windows"
+decorator==5.2.1 ; python_version == "3.13"
 deprecation==2.1.0 ; python_version == "3.13"
 fiona==1.10.1 ; python_version == "3.13"
 flask==3.1.1 ; python_version == "3.13"
-fsspec==2025.3.2 ; python_version == "3.13"
+frozenlist==1.6.0 ; python_version == "3.13"
+fsspec==2025.5.1 ; python_version == "3.13"
 functions-framework==3.8.2 ; python_version == "3.13"
+gcsfs==2025.5.1 ; python_version == "3.13"
 geopandas==1.0.1 ; python_version == "3.13"
 google-api-core==2.24.2 ; python_version == "3.13"
+google-auth-oauthlib==1.2.2 ; python_version == "3.13"
 google-auth==2.40.1 ; python_version == "3.13"
 google-cloud-core==2.4.3 ; python_version == "3.13"
 google-cloud-storage==3.1.0 ; python_version == "3.13"
@@ -26,17 +34,23 @@ idna==3.10 ; python_version == "3.13"
 itsdangerous==2.2.0 ; python_version == "3.13"
 jinja2==3.1.6 ; python_version == "3.13"
 markupsafe==3.0.2 ; python_version == "3.13"
-numpy==2.2.5 ; python_version == "3.13"
+multidict==6.4.4 ; python_version == "3.13"
+numpy==2.3.2 ; python_version == "3.13"
+oauthlib==3.2.2 ; python_version == "3.13"
 packaging==25.0 ; python_version == "3.13"
 pandas==2.2.3 ; python_version == "3.13"
+propcache==0.3.1 ; python_version == "3.13"
 proto-plus==1.26.1 ; python_version == "3.13"
 protobuf==6.31.0 ; python_version == "3.13"
 pyasn1-modules==0.4.2 ; python_version == "3.13"
 pyasn1==0.6.1 ; python_version == "3.13"
 pyogrio==0.11.0 ; python_version == "3.13"
+pyparsing==3.2.3 ; python_version == "3.13"
 pyproj==3.7.1 ; python_version == "3.13"
 python-dateutil==2.9.0.post0 ; python_version == "3.13"
 pytz==2025.2 ; python_version == "3.13"
+rasterio==1.4.3 ; python_version == "3.13"
+requests-oauthlib==2.0.0 ; python_version == "3.13"
 requests==2.32.3 ; python_version == "3.13"
 rsa==4.9.1 ; python_version == "3.13"
 shapely==2.1.0 ; python_version == "3.13"
@@ -46,3 +60,4 @@ tzdata==2025.2 ; python_version == "3.13"
 urllib3==2.4.0 ; python_version == "3.13"
 watchdog==6.0.0 ; python_version == "3.13"
 werkzeug==3.1.3 ; python_version == "3.13"
+yarl==1.20.0 ; python_version == "3.13"
