install tippecanoe and init tippiecanoe util

--- a/cloud_functions/data_processing/requirements.txt
+++ b/cloud_functions/data_processing/requirements.txt
@@ -55,6 +55,7 @@ requests==2.32.3 ; python_version == "3.13"
 rsa==4.9.1 ; python_version == "3.13"
 shapely==2.1.0 ; python_version == "3.13"
 six==1.17.0 ; python_version == "3.13"
+tippecanoe==2.72.0 ; python_version == "3.13"
 tqdm==4.67.1 ; python_version == "3.13"
 tzdata==2025.2 ; python_version == "3.13"
 urllib3==2.4.0 ; python_version == "3.13"
