--- a/cloud_functions/data_processing/pyproject.toml
+++ b/cloud_functions/data_processing/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "gcsfs (>=2025.5.1,<2026.0.0)",
     "rasterio (>=1.4.3,<2.0.0)",
     "numpy (>=2.3.2,<3.0.0)",
+    "tippecanoe (>=2.72.0,<3.0.0)",
 ]
 
 [tool.poetry.group.dev.dependencies]
