--- a/cloud_functions/data_processing/pyproject.toml
+++ b/cloud_functions/data_processing/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "rasterio (>=1.4.3,<2.0.0)",
     "numpy (>=2.3.2,<3.0.0)",
     "tippecanoe (>=2.72.0,<3.0.0)",
+    "boto3 (>=1.40.18,<2.0.0)",
 ]
 
 [tool.poetry.group.dev.dependencies]
