--- a/cloud_functions/data_processing/docker-compose.yml
+++ b/cloud_functions/data_processing/docker-compose.yml
@@ -8,4 +8,6 @@ services:
     ports:
       - 3001:8080
     env_file: .env
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     restart: always
