clean up and updating the default .env for documentation

--- a/cloud_functions/data_processing/.env.default
+++ b/cloud_functions/data_processing/.env.default
@@ -1,6 +1,17 @@
 BUCKET=
 PROJECT=
+
+MAPBOX_USER=
+MAPBOX_TOKEN=
+
+PP_API_KEY=
+
 STRAPI_API_URL=
 STRAPI_USERNAME=
 STRAPI_PASSWORD=
-PP_API_KEY=
+
+DATABASE_USERNAME=
+DATABASE_PASSWORD=
+DATABASE_NAME=
+DATABASE_HOST=
+
