clean up eslint rules and comments

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -33,7 +33,8 @@
       {
         "caughtErrors": "none"
       }
-    ]
+    ],
+    "@typescript-eslint/ban-ts-comment": "off"
   },
   "overrides": [
     {
