--- a/cms/config/sync/core-store.plugin_localazy_plugin-settings.json
+++ b/cms/config/sync/core-store.plugin_localazy_plugin-settings.json
@@ -1,7 +1,7 @@
 {
   "key": "plugin_localazy_plugin-settings",
   "value": {
-    "defaultRoute": "upload",
+    "defaultRoute": "download",
     "upload": {
       "allowAutomated": true,
       "automatedTriggers": [
@@ -14,11 +14,13 @@
       "webhookAuthorId": "2",
       "webhookLanguages": [
         "es",
-        "fr"
+        "fr",
+        "pt"
       ],
       "uiLanguages": [
         "es",
-        "fr"
+        "fr",
+        "pt"
       ]
     }
   },
