--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -230,6 +230,9 @@ jobs:
 
   test_data_cloud_function:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./cloud_functions/data_processing
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -239,10 +242,6 @@ jobs:
         with:
           python-version: '3.13'
 
-      - name:  CD to function directory
-        run:  |
-          cd ./cloud_functions/data_processing
-          
       - name: Install Poetry
         uses: abatilo/actions-poetry@v3
         with:
