--- a/cloud_functions/data_processing/pyproject.toml
+++ b/cloud_functions/data_processing/pyproject.toml
@@ -43,6 +43,8 @@ package-mode = false
 
 [tool.ruff]
 line-length = 100
+
+[tool.ruff.lint]
 select=["E", "F", "UP", "B", "SIM", "I"]
 ignore=["UP038"]
 
