--- a/cloud_functions/data_processing/requirements.txt
+++ b/cloud_functions/data_processing/requirements.txt
@@ -36,6 +36,7 @@ idna==3.10 ; python_version == "3.13"
 itsdangerous==2.2.0 ; python_version == "3.13"
 jinja2==3.1.6 ; python_version == "3.13"
 jmespath==1.0.1 ; python_version == "3.13"
+joblib==1.5.2 ; python_version == "3.13"
 markupsafe==3.0.2 ; python_version == "3.13"
 multidict==6.4.4 ; python_version == "3.13"
 numpy==2.3.2 ; python_version == "3.13"
