--- a/cloud_functions/data_processing/requirements.txt
+++ b/cloud_functions/data_processing/requirements.txt
@@ -47,6 +47,7 @@ propcache==0.3.1 ; python_version == "3.13"
 proto-plus==1.26.1 ; python_version == "3.13"
 protobuf==6.31.0 ; python_version == "3.13"
 psycopg==3.2.10 ; python_version == "3.13"
+pyarrow==22.0.0 ; python_version == "3.13"
 pyasn1-modules==0.4.2 ; python_version == "3.13"
 pyasn1==0.6.1 ; python_version == "3.13"
 pyogrio==0.11.0 ; python_version == "3.13"
