--- a/cloud_functions/data_processing/pyproject.toml
+++ b/cloud_functions/data_processing/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "boto3 (>=1.40.18,<2.0.0)",
     "psycopg (>=3.2.10,<4.0.0)",
     "joblib (>=1.5.2,<2.0.0)",
+    "pyarrow (>=22.0.0,<23.0.0)",
 ]
 
 [tool.poetry.group.dev.dependencies]
