--- a/cloud_functions/data_processing/pyproject.toml
+++ b/cloud_functions/data_processing/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "psycopg (>=3.2.10,<4.0.0)",
     "joblib (>=1.5.2,<2.0.0)",
     "pyarrow (>=22.0.0,<23.0.0)",
+    "psutil (>=7.1.3,<8.0.0)",
 ]
 
 [tool.poetry.group.dev.dependencies]
