--- a/cloud_functions/data_processing/requirements.txt
+++ b/cloud_functions/data_processing/requirements.txt
@@ -46,6 +46,7 @@ pandas==2.2.3 ; python_version == "3.13"
 propcache==0.3.1 ; python_version == "3.13"
 proto-plus==1.26.1 ; python_version == "3.13"
 protobuf==6.31.0 ; python_version == "3.13"
+psutil==7.1.3 ; python_version == "3.13"
 psycopg==3.2.10 ; python_version == "3.13"
 pyarrow==22.0.0 ; python_version == "3.13"
 pyasn1-modules==0.4.2 ; python_version == "3.13"
