--- a/cloud_functions/data_processing/requirements.txt
+++ b/cloud_functions/data_processing/requirements.txt
@@ -27,12 +27,17 @@ google-api-core==2.24.2 ; python_version == "3.13"
 google-auth-oauthlib==1.2.2 ; python_version == "3.13"
 google-auth==2.40.1 ; python_version == "3.13"
 google-cloud-core==2.4.3 ; python_version == "3.13"
+google-cloud-pubsub==2.33.0 ; python_version == "3.13"
 google-cloud-storage==3.1.0 ; python_version == "3.13"
 google-crc32c==1.7.1 ; python_version == "3.13"
 google-resumable-media==2.7.2 ; python_version == "3.13"
 googleapis-common-protos==1.70.0 ; python_version == "3.13"
+grpc-google-iam-v1==0.14.3 ; python_version == "3.13"
+grpcio-status==1.73.1 ; python_version == "3.13"
+grpcio==1.76.0 ; python_version == "3.13"
 gunicorn==23.0.0 ; python_version == "3.13" and platform_system != "Windows"
 idna==3.10 ; python_version == "3.13"
+importlib-metadata==8.7.0 ; python_version == "3.13"
 itsdangerous==2.2.0 ; python_version == "3.13"
 jinja2==3.1.6 ; python_version == "3.13"
 jmespath==1.0.1 ; python_version == "3.13"
@@ -41,6 +46,9 @@ markupsafe==3.0.2 ; python_version == "3.13"
 multidict==6.4.4 ; python_version == "3.13"
 numpy==2.3.2 ; python_version == "3.13"
 oauthlib==3.2.2 ; python_version == "3.13"
+opentelemetry-api==1.38.0 ; python_version == "3.13"
+opentelemetry-sdk==1.38.0 ; python_version == "3.13"
+opentelemetry-semantic-conventions==0.59b0 ; python_version == "3.13"
 packaging==25.0 ; python_version == "3.13"
 pandas==2.2.3 ; python_version == "3.13"
 propcache==0.3.1 ; python_version == "3.13"
@@ -65,8 +73,10 @@ shapely==2.1.0 ; python_version == "3.13"
 six==1.17.0 ; python_version == "3.13"
 tippecanoe==2.72.0 ; python_version == "3.13"
 tqdm==4.67.1 ; python_version == "3.13"
+typing-extensions==4.15.0 ; python_version == "3.13"
 tzdata==2025.2 ; python_version == "3.13"
 urllib3==2.4.0 ; python_version == "3.13"
 watchdog==6.0.0 ; python_version == "3.13"
 werkzeug==3.1.3 ; python_version == "3.13"
 yarl==1.20.0 ; python_version == "3.13"
+zipp==3.23.0 ; python_version == "3.13"
