--- a/cloud_functions/data_processing/pyproject.toml
+++ b/cloud_functions/data_processing/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "pyarrow (>=22.0.0,<23.0.0)",
     "psutil (>=7.1.3,<8.0.0)",
     "google-cloud-pubsub (>=2.33.0,<3.0.0)",
+    "google-cloud-tasks (>=2.20.0,<3.0.0)",
 ]
 
 [tool.poetry.group.dev.dependencies]
