--- a/cloud_functions/data_processing/requirements.txt
+++ b/cloud_functions/data_processing/requirements.txt
@@ -29,6 +29,7 @@ google-auth==2.40.1 ; python_version == "3.13"
 google-cloud-core==2.4.3 ; python_version == "3.13"
 google-cloud-pubsub==2.33.0 ; python_version == "3.13"
 google-cloud-storage==3.1.0 ; python_version == "3.13"
+google-cloud-tasks==2.20.0 ; python_version == "3.13"
 google-crc32c==1.7.1 ; python_version == "3.13"
 google-resumable-media==2.7.2 ; python_version == "3.13"
 googleapis-common-protos==1.70.0 ; python_version == "3.13"
