--- a/cloud_functions/data_processing/pyproject.toml
+++ b/cloud_functions/data_processing/pyproject.toml
@@ -29,6 +29,8 @@ dependencies = [
     "pyarrow (>=22.0.0,<23.0.0)",
     "psutil (>=7.1.3,<8.0.0)",
     "google-cloud-tasks (>=2.20.0,<3.0.0)",
+    "sqlalchemy (>=2.0.45,<3.0.0)",
+    "geoalchemy2 (>=0.18.1,<0.19.0)",
 ]
 
 [tool.poetry.group.dev.dependencies]
