remove update methods for testing

--- a/cloud_functions/data_processing/requirements.txt
+++ b/cloud_functions/data_processing/requirements.txt
@@ -22,6 +22,7 @@ frozenlist==1.6.0 ; python_version == "3.13"
 fsspec==2025.5.1 ; python_version == "3.13"
 functions-framework==3.8.2 ; python_version == "3.13"
 gcsfs==2025.5.1 ; python_version == "3.13"
+geoalchemy2==0.18.1 ; python_version == "3.13"
 geopandas==1.0.1 ; python_version == "3.13"
 google-api-core==2.24.2 ; python_version == "3.13"
 google-auth-oauthlib==1.2.2 ; python_version == "3.13"
@@ -32,6 +33,7 @@ google-cloud-tasks==2.20.0 ; python_version == "3.13"
 google-crc32c==1.7.1 ; python_version == "3.13"
 google-resumable-media==2.7.2 ; python_version == "3.13"
 googleapis-common-protos==1.70.0 ; python_version == "3.13"
+greenlet==3.3.0 ; python_version == "3.13" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32")
 grpc-google-iam-v1==0.14.3 ; python_version == "3.13"
 grpcio-status==1.73.1 ; python_version == "3.13"
 grpcio==1.76.0 ; python_version == "3.13"
@@ -67,6 +69,7 @@ rsa==4.9.1 ; python_version == "3.13"
 s3transfer==0.13.1 ; python_version == "3.13"
 shapely==2.1.0 ; python_version == "3.13"
 six==1.17.0 ; python_version == "3.13"
+sqlalchemy==2.0.45 ; python_version == "3.13"
 tippecanoe==2.72.0 ; python_version == "3.13"
 tqdm==4.67.1 ; python_version == "3.13"
 typing-extensions==4.15.0 ; python_version == "3.13"
