--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -2,6 +2,9 @@ name: Deploy Staging
 
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - feature/remove-develop-branch-dependency
   pull_request:
     branches:
       - main
