--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -25,7 +25,7 @@ jobs:
             exit 1
           fi
 
-  deploy:
+  prod:
     needs: guard
     uses: ./.github/workflows/deploy-services.yml
     secrets: inherit
