--- a/.github/workflows/deploy-data-cloud-function.yml
+++ b/.github/workflows/deploy-data-cloud-function.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Run tests
         run: poetry run pytest -q
 
-  deploy:
+  deploy_data_cloud_functions:
     if: (github.event_name == 'push' || github.event_name == 'workflow_dispatch')
     runs-on: ubuntu-latest
 
@@ -58,12 +58,18 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Determine Environment
+        id: env
+        uses: ./.github/actions/determine-env
+        with:
+          target_env: ${{ inputs.target_env }}
+
       - name: Setup GCP
         id: setup
         uses: ./.github/actions/setup-gcp
         with:
           gar_location: ${{ env.GAR_LOCATION }}
-          target_env: ${{ inputs.target_env }}
+          credentials_json: "${{ secrets[format('{0}_GCP_SA_KEY', steps.env.outputs.environment)] }}"
 
       - name: 'Set up Cloud SDK'
         uses: 'google-github-actions/setup-gcloud@v2'
@@ -75,7 +81,7 @@ jobs:
 
       - name: 'Deploy to gen2 cloud function'
         env:
-          CLOUD_FUNCTION_NAME: ${{ secrets[format('{0}_DATA_CF_NAME', steps.setup.outputs.environment)] }}
+          CLOUD_FUNCTION_NAME: ${{ secrets[format('{0}_DATA_CF_NAME', steps.env.outputs.environment)] }}
         run:  |
           gcloud functions deploy  ${{ env.CLOUD_FUNCTION_NAME }} \
           --gen2 \
