--- a/cloud_functions/data_processing/requirements.txt
+++ b/cloud_functions/data_processing/requirements.txt
@@ -28,6 +28,7 @@ google-api-core==2.24.2 ; python_version == "3.13"
 google-auth-oauthlib==1.2.2 ; python_version == "3.13"
 google-auth==2.40.1 ; python_version == "3.13"
 google-cloud-core==2.4.3 ; python_version == "3.13"
+google-cloud-run==0.15.0 ; python_version == "3.13"
 google-cloud-storage==3.1.0 ; python_version == "3.13"
 google-cloud-tasks==2.20.0 ; python_version == "3.13"
 google-crc32c==1.7.1 ; python_version == "3.13"
