--- a/cloud_functions/data_processing/pyproject.toml
+++ b/cloud_functions/data_processing/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "google-cloud-tasks (>=2.20.0,<3.0.0)",
     "sqlalchemy (>=2.0.45,<3.0.0)",
     "geoalchemy2 (>=0.18.1,<0.19.0)",
+    "google-cloud-run (>=0.15.0,<0.16.0)",
 ]
 
 [tool.poetry.group.dev.dependencies]
