--- a/.github/workflows/localazy-upload.yml
+++ b/.github/workflows/localazy-upload.yml
@@ -1,9 +1,7 @@
 name: Upload to Localazy
+
 on: 
-  push:
-    workflow_dispatch:
-    branches:
-      - develop
+  workflow_call:
 
 jobs:
   localazy-upload:
