--- a/.github/workflows/deploy-services.yml
+++ b/.github/workflows/deploy-services.yml
@@ -14,6 +14,10 @@ on:
 # STAGING PHASE
 # -----------------------------
 jobs:
+  upload_localazy:
+    uses: ./.github/workflows/localazy-upload.yml
+    secrets: inherit
+
   staging_client:
     if: |
       inputs.deploy_to_staging && (github.event_name == 'push' || github.event_name == 'workflow_dispatch')
@@ -73,6 +77,10 @@ jobs:
 # PRODUCTION PHASE
 # (runs only after staging_complete succeeds)
 # -----------------------------
+  release_localazy:
+    uses: ./.github/workflows/localazy-release.yml
+    secrets: inherit
+
   prod_client:
     if: |
       inputs.deploy_to_prod && (github.event_name == 'push' || github.event_name == 'workflow_dispatch')
