wait for stagging ocmplete to run before releasing translation tags

--- a/.github/workflows/deploy-services.yml
+++ b/.github/workflows/deploy-services.yml
@@ -84,6 +84,7 @@ jobs:
       inputs.deploy_to_prod && (github.event_name == 'push' || github.event_name == 'workflow_dispatch')
     uses: ./.github/workflows/localazy-release.yml
     secrets: inherit
+    needs: [staging_complete]
 
   prod_client:
     if: |
