Move translation CI/CD steps into service deploy flows (#429)
* move localazy ci/cd stesp into service deploy flows

* add env checks to localazy cicd stesp

* wait for stagging ocmplete to run before releasing translation tags

---------

Co-authored-by: Will <williamlytle@Williams-MacBook-Pro.local>

--- a/.github/workflows/deploy-services.yml
+++ b/.github/workflows/deploy-services.yml
@@ -14,6 +14,12 @@ on:
 # STAGING PHASE
 # -----------------------------
 jobs:
+  upload_localazy:
+    if: |
+      inputs.deploy_to_staging && (github.event_name == 'push' || github.event_name == 'workflow_dispatch')
+    uses: ./.github/workflows/localazy-upload.yml
+    secrets: inherit
+
   staging_client:
     if: |
       inputs.deploy_to_staging && (github.event_name == 'push' || github.event_name == 'workflow_dispatch')
@@ -73,6 +79,13 @@ jobs:
 # PRODUCTION PHASE
 # (runs only after staging_complete succeeds)
 # -----------------------------
+  release_localazy:
+    if: |
+      inputs.deploy_to_prod && (github.event_name == 'push' || github.event_name == 'workflow_dispatch')
+    uses: ./.github/workflows/localazy-release.yml
+    secrets: inherit
+    needs: [staging_complete]
+
   prod_client:
     if: |
       inputs.deploy_to_prod && (github.event_name == 'push' || github.event_name == 'workflow_dispatch')
