--- a/.github/workflows/deploy-data-cloud-job.yml
+++ b/.github/workflows/deploy-data-cloud-job.yml
@@ -69,19 +69,10 @@ jobs:
 
           echo "IMAGE_URI=$IMAGE_URI" >> $GITHUB_ENV
 
-      - name: Resolve digest
-        env:
-          REPOSITORY: ${{ secrets[format('{0}_DATA_REPOSITORY', steps.env.outputs.environment)] }}
-        run: |
-          DIGEST="$(gcloud artifacts docker images describe "${{ env.IMAGE_URI }}" \
-            --format='get(image_summary.digest)')"
-          IMAGE_BY_DIGEST="${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${REPOSITORY}/${{ env.IMAGE_NAME }}@${DIGEST}"
-          echo "IMAGE_BY_DIGEST=$IMAGE_BY_DIGEST" >> $GITHUB_ENV
-
       - name: Deploy Cloud Run Job (by digest)
         uses: google-github-actions/deploy-cloudrun@v3
         with:
           job: ${{ secrets[format('{0}_DATA_JOB_NAME', steps.env.outputs.environment)] }}
-          image: ${{ env.IMAGE_BY_DIGEST }}
+          image: ${{ env.IMAGE_URI }}
           region: ${{ env.REGION }}
           project_id: ${{ env.PROJECT_ID }}
