includ cloudrun_jobs in other gh actions files

--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -9,6 +9,7 @@ on:
       - 'frontend/**'
       - 'cms/**'
       - 'cloud_functions/**'
+      - 'cloudrun_jobs/**'
       - '.github/workflows/*'
       - '.github/actions/*'
 
